--- a/company.html
+++ b/company.html
@@ -31,7 +31,7 @@
                 <div id='com_img'></div>
                 <div id='com_mainLogo'></div>
                 <p id='sm_p'>인재 채용 희망</p>
-                <h2>멋쟁이호랑이</h2>
+                <h2><a class="companyName" href="./company2.html">멋쟁이호랑이</a></h2>
                 <ul>
                     <li>#착한</li>
                     <li>#활동적인</li>
