--- a/company2.html
+++ b/company2.html
@@ -18,6 +18,44 @@
 
 ::-webkit-scrollbar { display: none; }
 
+.nav-container {
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            background-color: #EEEEEE;
+        }
+
+        .navigation{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            color: #333;
+        }
+
+        .navigation h1{
+            margin-left: 120px;
+        }
+
+        .navigation ul{
+            display: flex;
+            flex-direction: row;
+            margin-right: 120px;
+        }
+
+        .navigation li{
+            list-style: none;
+            font-size: 16px;
+            margin-left: 50px;
+        }
+
+        .navigation a{
+            text-decoration: none;
+            color: #333;
+        }
+
 ul {
     list-style: none;
 }
@@ -161,14 +199,85 @@ ul {
 }
 
 .apply{
-    width: 100%;
-    height: 600px;
-    background-color: burlywood;
+    width: 70%;
+    height: auto;
+    margin: 100px auto;
 }
+
+.apply h1{
+    font-size: 24px;
+    font-weight: 400;
+    color: #333;
+}
+
+.apply h3{
+    font-size: 18px;
+    font-weight: 700;
+
+    margin-bottom: 12px;
+    color: #333;
+}
+
+.apply input{
+    width: 100%;
+    height: 264px;
+    border: solid 1px #828282;
+
+    margin-bottom: 24px;
+}
+
+.uploadBtn{
+    width: 290px;
+    height: 50px;
+    font-size: 18px;
+    color: #333;
+    text-align: center;
+    margin-right: 24px;
+
+    margin-top: 38px;
+    margin-bottom: 54px;
+
+    background-color: transparent;
+    border: solid 1px #585858;
+}
+
+.applyBtn{
+    width: 290px;
+    height: 50px;
+    font-size: 18px;
+    text-align: center;
+
+    color: white;
+    background-color: #727272;
+    border: none;
+
+    margin-top: 24px;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btnContainer{
+    text-align: center;
+}
+
 
     </style>
 </head>
 <body>
+    <header class="nav-container">
+        <nav class="navigation">
+            <a href="#"><h1>KPU DESIGN</h1></a>
+            <ul>
+                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="./stundents.html">STUDENTS</a></li>
+                <li><a href="./works.html">WORKS</a></li>
+                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./former.html">FORMER-GRADUATED</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
 
         <div class='introduce'>
@@ -212,22 +321,24 @@ ul {
 
             <div class="apply" id="hiddenContent" style="display: none;">
                 <h1>지원서 작성</h1>
-                <button class="upload">이력서 첨부</button>
-                <button class="upload">포트폴리오 첨부</button>
+                <button class="uploadBtn">이력서 첨부</button>
+                <button class="uploadBtn">포트폴리오 첨부</button>
 
                 <h3>최근 문제 해결을 했던 경험을 기재해주세요.</h3>
-                <input>
+                <input type="text" placeholder="최대 500자">
 
                 <h3>자신의 장점을 기재해주세요.</h3>
-                <input>
+                <input type="text" placeholder="최대 500자">
 
                 <h3>AI를 의류에 적용한다면 어떤 아이템이 좋을지 생각나는 대로 적어주세요.</h3>
                 <input>
 
                 <h3>기존 의류 회사의 문제점이 무엇이라고 생각하는지 기재해주세요.</h3>
-                <input>
+                <input type="text" placeholder="최대 500자">
 
-                <button>지원하기</button>
+                <div class="btnContainer">
+                <button class="applyBtn">지원하기</button>
+                </div>
             </div>
 
         <script>
