--- a/mainpage.html
+++ b/mainpage.html
@@ -68,7 +68,7 @@
         .mainTitle{
             font-size: 32px;
             font-weight: 700;
-            color: #796CBA;
+            color: #3B72EE;
         }
 
         .search{
@@ -162,15 +162,15 @@
         }
 
         .colorA{
-            background-color: #6A5DB4;
+            background-color: #A9C1F8;
         }
 
         .colorB{
-            background-color: #8277c6;
+            background-color: #A9C1F8;
         }
 
         .colorC{
-            background-color: #50439b;
+            background-color: #3B72EE;
         }
 
         .t-six{
@@ -219,8 +219,50 @@
 
         .tagOpen{
             width: 100%;
-            height: 700px;
-            background-color: #EEEEEE;
+            height: 600px;
+            margin-top: 100px;
+        }
+
+        .circle1{
+            width: 568px;
+            height: 568px;
+            border: solid 1.5px #3B72EE;
+            border-radius: 284px;
+
+            margin: auto; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .circle2{
+            width: 436px;
+            height: 436px;
+            border: solid 1.5px #3B72EE;
+            opacity: 48%;
+            border-radius: 218px;    
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .circle3{
+            width: 274px;
+            height: 274px;
+            border: solid 1.5px #3B72EE;
+            opacity: 44%;
+            border-radius: 138px; 
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .circle3 h1{
+            font-size: 96px;
+            color: #3B72EE;
+            font-weight: 600;
         }
 
         .designMajor{
@@ -228,13 +270,17 @@
             height: 700px;
             text-align: center;
             margin-top: 72px;
+
+            background-color: #3B72EE;
         }
 
         .designMajor h1{
             margin-bottom: 76px;
-            color: #6A5DB4;
-            font-size: 24px;
+            color: white;
+            font-size: 32px;
             font-weight: 700;
+
+            padding-top: 58px;
         }
 
         .conbContainer{
@@ -251,21 +297,21 @@
             width: 400px;
             height: 360px;
 
-            border: solid 2px #6A5DB4;
-            border-radius: 146px;
+            background-color: #D0D5FF;
+            border-radius: 50px;
             display: flex;
             flex-direction: column;
             justify-content: center;
         }
 
         .conB h2{
-            color: #6A5DB4;
+            color: #393939;
             font-size: 20px;
             margin-bottom: 12px;
         }
 
         .conB p{
-            color: #CBCBCB;
+            color: #393939;
             font-size: 17px;
         }
 
@@ -334,7 +380,15 @@
             </span>
         </button>
     </div>
-    <div id="hiddenContent" class="tagOpen" style="display: none;"></div>
+    <div id="hiddenContent" class="tagOpen" style="display: block;">
+        <div class="circle1">
+            <div class="circle2">
+                <div class="circle3">
+                    <h1>2021</h1>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="designMajor">
         <h1>2021 MAJOR OF DESIGN ENGINEERING</h1>
         <div class="conbContainer">
