--- a/stundents.html
+++ b/stundents.html
@@ -40,7 +40,7 @@
     <div class='stu_main'>
         <div class='students'>
             <div id='explain'>
-                <h4>나졸업</h4>
+                <h4><a href="./students_2.html" color="white">나졸업</a></h4>
                 <p>미디어디자인전공</p>
                 <p>kpu123@kpu.ac.kr</p>
             </div>
