--- a/works.html
+++ b/works.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class='work_main'>
-            <div class='works'></div>
+            <div class='works'><a href="./works_2.html">demo</a></div>
             <div class='works'></div>
             <div class='works'></div>
             <div class='works'></div>
