--- a/company2.html
+++ b/company2.html
@@ -267,7 +267,7 @@ ul {
 <body>
     <header class="nav-container">
         <nav class="navigation">
-            <a href="#"><h1>KPU DESIGN</h1></a>
+            <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
             <ul>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
