--- a/works_2.html
+++ b/works_2.html
@@ -14,7 +14,7 @@
             <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
                 <ul></a>
                 <li><a href="./about.html">ABOUT</a></li>
-                <li><a href="#">STUDENTS</a></li>
+                <li><a href="./stundents.html">STUDENTS</a></li>
                 <li><a href="./works.html">WORKS</a></li>
                 <li><a href="./company.html">ENTERPRISE</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
