--- a/mainpage.html
+++ b/mainpage.html
@@ -25,7 +25,6 @@
             height: 60px;
             display: flex;
             align-items: center;
-            background-color: #EEEEEE;
         }
 
         .navigation{
@@ -34,7 +33,7 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            color: #333;
+            color: #0E1F46;
         }
 
         .navigation h1{
@@ -55,7 +54,12 @@
 
         .navigation a{
             text-decoration: none;
-            color: #333;
+            color: #0E1F46;
+        }
+
+        .navigation li :hover{
+            border-bottom: solid 4px #B1E7FC;
+            padding-bottom: 4px;
         }
 
         .mainFeature{
@@ -86,13 +90,13 @@
             width: 672px;
             height: 36px;
             border-radius: 55px;
-            border: 2px solid #6A5DB4;
+            border: 2px solid #3B72EE;
             margin-top: 36px;
             padding: 10px 12px;
         }
 
         input::placeholder {
-            color: #9F95D9;
+            color: #3B72EE;
             font-size: 17px;
             font-weight: 400;
             padding-left: 12px;
