--- a/company2.html
+++ b/company2.html
@@ -23,7 +23,6 @@
             height: 60px;
             display: flex;
             align-items: center;
-            background-color: #EEEEEE;
         }
 
         .navigation{
@@ -32,7 +31,7 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            color: #333;
+            color: #0E1F46;
         }
 
         .navigation h1{
@@ -53,7 +52,12 @@
 
         .navigation a{
             text-decoration: none;
-            color: #333;
+            color: #0E1F46;
+        }
+
+        .navigation li :hover{
+            border-bottom: solid 4px #B1E7FC;
+            padding-bottom: 4px;
         }
 
 ul {
