--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
                 <li><a href="./works.html">WORKS</a></li>
-                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./company.html">CONNECT</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
             </ul>
         </nav>
