--- a/company2.html
+++ b/company2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 
     <style>
@@ -276,7 +277,7 @@ ul {
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
                 <li><a href="./works.html">WORKS</a></li>
-                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./company.html">CONNECT</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
             </ul>
         </nav>
