--- a/students_2.html
+++ b/students_2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Students_2</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
                 <li><a href="./works.html">WORKS</a></li>
-                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./company.html">CONNECT</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
             </ul>
         </nav>
