--- a/stundents.html
+++ b/stundents.html
@@ -17,7 +17,7 @@
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="#">STUDENTS</a></li>
                 <li><a href="./works.html">WORKS</a></li>
-                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./company.html">CONNECT</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
             </ul>
         </nav>
