--- a/works.html
+++ b/works.html
@@ -19,7 +19,7 @@
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
                 <li><a href="#">WORKS</a></li>
-                <li><a href="./company.html">ENTERPRISE</a></li>
+                <li><a href="./company.html">CONNECT</a></li>
                 <li><a href="./former.html">FORMER-GRADUATED</a></li>
             </ul>
         </nav>
