--- a/works.html
+++ b/works.html
@@ -48,8 +48,8 @@
         </div>
 
         <div class='work_main'>
-            <div id='work_mom'></div>
-            <div id='work_mom'></div>            
+            <div id='work_mom' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
+            <div id='work_mom' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>            
         </div>
         
         <div id='work_mname'>
@@ -57,7 +57,7 @@
             <p id='work_hash' style="cursor:pointer;"># UX/UI</p>
         </div>
 
-        <div id='work_3d'></div>
+        <div id='work_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
@@ -66,8 +66,8 @@
         </div>
 
         <div class='work_main'>
-            <div id='work_mom'></div>
-            <div id='work_mom'></div>            
+            <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+            <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>            
         </div>
         
         <div id='work_mname'>
@@ -79,7 +79,7 @@
             <p id='work_hash' style="cursor:pointer;"># app Design</p>
         </div>
 
-        <div id='work_3d'></div>
+        <div id='work_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
