--- a/company.html
+++ b/company.html
@@ -23,23 +23,79 @@
         </nav>
     </header>
 
+    <div class='sub_header'>
+        <ul class='sub_li'>
+            <li><a href='#' id='emphasis'>COMPANY</a></li>
+            <li><a href='#'></a></li>
+            <li><a href='#'></a></li>
+            <li><a href='#'></a></li>
+            <li><a href='#'></a></li>
+        </ul>
+    </div>
+
     <main>
 
-        <h1 id='stu_title'>MEDIA DESIGN ENGINEERING</h1>
+        <h1 id='com_title'>KPU<br>DESIGN<br>ENGINEERING</h1>
+
         <div class='company'>
             <div class='com'>
                 <div id='com_img'></div>
-                <div id='com_mainLogo'></div>
+                <!-- <div id='com_mainLogo'></div> -->
                 <p id='sm_p'>인재 채용 희망</p>
-                <h2><a class="companyName" href="./company2.html">멋쟁이호랑이</a></h2>
+                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
                     <li>#착한</li>
                     <li>#활동적인</li>
                     <li>#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p><a href='#' id='com_go'>지원하기</a></p>
             </div>
-            <div class='com side'>
+
+            <div class='com'>
+                <div id='com_img'></div>
+                <!-- <div id='com_mainLogo'></div> -->
+                <p id='sm_p'>인재 채용 희망</p>
+                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <ul>
+                    <li>#착한</li>
+                    <li>#활동적인</li>
+                    <li>#짱</li>
+                </ul>
+                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p><a href='#' id='com_go'>지원하기</a></p>
+            </div>
+
+            <div class='com'>
+                <div id='com_img'></div>
+                <!-- <div id='com_mainLogo'></div> -->
+                <p id='sm_p'>인재 채용 희망</p>
+                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <ul>
+                    <li>#착한</li>
+                    <li>#활동적인</li>
+                    <li>#짱</li>
+                </ul>
+                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p><a href='#' id='com_go'>지원하기</a></p>
+            </div>
+
+            <div class='com'>
+                <div id='com_img'></div>
+                <!-- <div id='com_mainLogo'></div> -->
+                <p id='sm_p'>인재 채용 희망</p>
+                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <ul>
+                    <li>#착한</li>
+                    <li>#활동적인</li>
+                    <li>#짱</li>
+                </ul>
+                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p><a href='#' id='com_go'>지원하기</a></p>
+            </div>
+
+            
+            <!-- <div class='com side'>
                 <div id='com_logo'></div>
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2>멋쟁이호랑이</h2>
@@ -58,17 +114,20 @@
                 <div id='com_logo'></div>
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2>멋쟁이호랑이</h2>
-            </div>
+            </div> -->
         </div>
 
-        <ul id='next'>
+        <ul id='work_bottom'>
             <li><a href='#' id='now'>1</a></li>
             <li><a href='#'>2</a></li>
             <li><a href='#'>3</a></li>
             <li><a href='#'>4</a></li>
             <li><a href='#'>5</a></li>
-        </ul>
 
+        </ul>
+        
+        <div id='com_deco'></div>
+        <div id='com_deco2'></div>
 
     </main>
 
