--- a/works.html
+++ b/works.html
@@ -88,7 +88,7 @@
         </div>
 
         <ul id='work_bottom'>
-            <li><a href='#'>1</a></li>
+            <li><a href='#' id='now'>1</a></li>
             <li><a href='#'>2</a></li>
             <li><a href='#'>3</a></li>
             <li><a href='#'>4</a></li>
