--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <header class="nav-container">
         <nav class="navigation">
-            <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
+            <a href="./index.html"><h1>KPU DESIGN</h1></a>
             <ul>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
