--- a/former.html
+++ b/former.html
@@ -116,7 +116,7 @@
 <body>
   <header class="nav-container1">
     <nav class="navigation1">
-        <a href="#"><h1 id="kpu-logo">KPU DESIGN</h1></a>
+        <a href="./index.html"><h1 id="kpu-logo">KPU DESIGN</h1></a>
         <ul>
             <li><a href="./about.html">ABOUT</a></li>
             <li><a href="./stundents.html">STUDENTS</a></li>
