--- a/company.html
+++ b/company.html
@@ -12,7 +12,7 @@
 
     <header class="nav-container">
         <nav class="navigation">
-            <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
+            <a href="./index.html"><h1>KPU DESIGN</h1></a>
             <ul>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
@@ -49,7 +49,7 @@
                     <li>#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
-                <p><a href='#' id='com_go'>지원하기</a></p>
+                <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
             <div class='com'>
@@ -63,7 +63,7 @@
                     <li>#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
-                <p><a href='#' id='com_go'>지원하기</a></p>
+                <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
             <div class='com'>
@@ -77,7 +77,7 @@
                     <li>#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
-                <p><a href='#' id='com_go'>지원하기</a></p>
+                <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
             <div class='com'>
@@ -91,7 +91,7 @@
                     <li>#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
-                <p><a href='#' id='com_go'>지원하기</a></p>
+                <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
             
