--- a/stundents.html
+++ b/stundents.html
@@ -14,7 +14,7 @@
 
     <header class="nav-container">
         <nav class="navigation">
-            <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
+            <a href="./index.html"><h1>KPU DESIGN</h1></a>
                 <ul></a>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="#">STUDENTS</a></li>
