--- a/works_2.html
+++ b/works_2.html
@@ -12,7 +12,7 @@
     
     <header class="nav-container">
         <nav class="navigation">
-            <a href="./mainpage.html"><h1>KPU DESIGN</h1></a>
+            <a href="./index.html"><h1>KPU DESIGN</h1></a>
                 <ul></a>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
