--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
             right: -150px;
             top: 650px;
         }
-
+       
         .floatingTag{
-            border: solid 1px white;
+            border: solid 1.5px white;
             padding: 12px 38px;
             height: 48px;
             border-radius: 24px;
@@ -385,7 +385,176 @@
             top: 1108px;
             right: 870px;
         }
-       
+
+        .floatingTag2{
+            border: solid 1px white;
+            padding: 10px 22px;
+            height: 48px;
+            border-radius: 24px;
+            box-shadow: 0px 2px 2px rgb(184, 184, 184);
+
+            background-color: #FDF06E ;
+            color: #4D4D4D;
+            font-size: 16px;
+
+            position: absolute;
+            z-index: 2;
+            top: 930px;
+            right: 620px;
+        }
+
+        .floatingTag3{
+            opacity: 90%;
+
+            border: solid 1px white;
+            padding: 14px 28px;
+            height: 48px;
+            border-radius: 24px;
+            box-shadow: 0px 2px 2px rgb(184, 184, 184);
+
+            background-color: #C1D3FF ;
+            color: #fff;
+            font-size: 16px;
+
+            position: absolute;
+            z-index: 2;
+            top: 1100px;
+            right: 590px;
+        }
+
+        .floatingTag4{
+            border: none;
+            padding: 14px 42px;
+            height: 48px;
+            border-radius: 24px;
+            box-shadow: 0px 2px 2px rgb(159, 159, 159);
+
+            background-color: #3467DB ;
+            color: #fff;
+            font-size: 16px;
+
+            position: absolute;
+            z-index: 2;
+            top: 1225px;
+            right: 560px;
+        }
+
+        .floatingTag5{
+            border: none;
+            padding: 8px 28px;
+            height: 36px;
+            border-radius: 18px;
+            box-shadow: 0px 2px 4px rgb(133, 133, 133);
+
+            background-color: #809CFF ;
+            color: #fff;
+            font-size: 16px;
+
+            position: absolute;
+            z-index: 2;
+            top: 1290px;
+            right: 880px;
+        }
+
+        .floatingTag6{
+            opacity: 70%;
+            border: solid 1px #fff;
+            padding: 8px 20px;
+            height: 34px;
+            border-radius: 17px;
+
+            background-color: #A9C1F8 ;
+            color: #5A5A5A;
+            font-size: 14px;
+
+            position: absolute;
+            z-index: 2;
+            top: 1000px;
+            right: 1104px;
+        }
+
+        .floatingTag7{
+            opacity: 60%;
+            border: none;
+            padding: 8px 20px;
+            height: 34px;
+            border-radius: 17px;
+            box-shadow: 0px 2px 4px rgb(133, 133, 133);
+
+            background-color: #0C48CE ;
+            color: #fff;
+            font-size: 14px;
+
+            position: absolute;
+            z-index: 2;
+            top: 840px;
+            right: 1072px;
+        }
+
+        .deco{
+            opacity: 25%;
+
+            width: 38px;
+            height: 38px;
+            border-radius: 19px;
+            background-color: #0C48CE;
+
+            position: absolute;
+            z-index: 2;
+            top: 854px;
+            right: 1056px;
+        }
+
+        .floatingTag8{
+            opacity: 50%;
+            border: none;
+            padding: 8px 20px;
+            height: 34px;
+            border-radius: 17px;
+
+            background-color: #073EFF ;
+            color: #fff;
+            font-size: 14px;
+
+            position: absolute;
+            z-index: 2;
+            top: 750px;
+            right: 900px;
+        }
+
+        .floatingTag9{
+            opacity: 50%;
+            border: none;
+            padding: 8px 16px;
+            height: 34px;
+            border-radius: 17px;
+
+            background-color: #9489C9 ;
+            color: #fff;
+            font-size: 14px;
+
+            position: absolute;
+            z-index: 2;
+            top: 800px;
+            right: 520px;
+        }
+
+        .floatingTag10{
+            border: dotted 2px #5F81FB ;
+            padding: 8px 14px;
+            height: 32px;
+            border-radius: 16px;
+
+            background-color: transparent ;
+            color: #6F6F6F;
+            font-size: 12px;
+
+            position: absolute;
+            z-index: 2;
+            top: 810px;
+            right: 760px;
+        }
+
     </style>
 </head>
 <body>
@@ -437,6 +606,16 @@
         <div class="poly2"></div>
         <div class="circle1">
             <button class="floatingTag"># UXUI</button>
+            <button class="floatingTag2"># 인터페이스</button>
+            <button class="floatingTag3"># WEB</button>
+            <button class="floatingTag4"># 3D</button>
+            <button class="floatingTag5"># 포트폴리오</button>
+            <button class="floatingTag6"># 웹디자인</button>
+            <button class="floatingTag7"># 산업디자인</button>
+            <div class="deco"></div>
+            <button class="floatingTag8"># VR</button>
+            <button class="floatingTag9"># 졸업</button>
+            <button class="floatingTag10"># 메타포</button>
             <div class="circle2">
                 <div class="circle3">
                     <h1>2021</h1>
