--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <div class='sub_header'>
             <ul class='sub_li'>
                 <li><a href='#' id='emphasis'>KPU DESIGN</a></li>
-                <li><a href='#'>MEDIA DESIGN ENGINEERING</a></li>
+                <li><a href='./mde.html'>MEDIA DESIGN ENGINEERING</a></li>
                 <li><a href='#'>INDUSTRY DESIGN ENGINEERING</a></li>
                 <li><a href='#'>GRADUATE EXHIBITION CONCEPT</a></li>
             </ul>
