--- a/mde.html
+++ b/mde.html
@@ -33,5 +33,32 @@
 
     <h1 class="aboutTitle">MEDIA <br> DESIGN <br> ENGINEERING</h1>
     <div class="poly3"></div>
+    <p id="info">디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개<br>
+        념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수<br>
+        진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+    <div class="poly4"></div>
+    <span class="backgroundText" id="media">MEDIA</span>
+    <span class="backgroundText" id="design">DESIGN</span>
+    <span class="backgroundText" id="Engineering">ENGINEERING</span>
+    
+    <div class="mdeCon" id="firstmdeCon">
+        <div class='introduce'>
+            <div id='introduceImg'></div>
+            <div>
+                <h2>교육 목적 및 목표</h2>
+                <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="mdeCon" id="secondmdeCon">
+        <div class='introduce'>
+            <div>
+                <h2>교육 목적 및 목표</h2>
+                <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+            </div>
+            <div id='introduceImg'></div>
+        </div>
+    </div>
 </body>
 </html>
