mde ide page complete

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <ul class='sub_li'>
                 <li><a href='#' id='emphasis'>KPU DESIGN</a></li>
                 <li><a href='./mde.html'>MEDIA DESIGN ENGINEERING</a></li>
-                <li><a href='#'>INDUSTRY DESIGN ENGINEERING</a></li>
+                <li><a href='./ide.html'>INDUSTRY DESIGN ENGINEERING</a></li>
                 <li><a href='#'>GRADUATE EXHIBITION CONCEPT</a></li>
             </ul>
         </div>
