--- a/works_2.html
+++ b/works_2.html
@@ -24,8 +24,8 @@
     </header>
     <div class='sub_header'>
         <ul class='sub_li2'>
-            <li><a href='./mde.html'>MEDIA DESIGN ENGINEERING</a></li>
-            <li><a href='./ide.html'>INDUSTRY DESIGN ENGINEERING</a></li>
+            <li><a href='./works.html'>MEDIA DESIGN ENGINEERING</a></li>
+            <li><a href='./works.html'>INDUSTRY DESIGN ENGINEERING</a></li>
         </ul>
     </div>
 
